--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -133,7 +133,10 @@
         "DaysHours": "%1$s 天 %2$s 小时",
         "DaysSinceFirstVisit": "第一次访问至今的天数",
         "DaysSinceLastEcommerceOrder": "从最后一个订单开始的天数",
+        "SecondsSinceLastEcommerceOrder": "距离最后一个订单的秒数",
         "DaysSinceLastVisit": "距离上次访问的天数",
+        "SecondsSinceLastVisit": "距离上次访问的秒数",
+        "SecondsSinceFirstVisit": "距离首次访问的秒数",
         "Default": "默认",
         "DefaultAppended": "（默认）",
         "Delete": "删除",
@@ -542,7 +545,7 @@
         "HowtoDeleteAnAccount": "长按删除帐号",
         "HowtoDeleteAnAccountOniOS": "从右到左滑动可删除帐号",
         "HowtoLoginAnonymous": "用户名和密码留空为匿名登录",
-        "HttpIsNotSecureWarning": "如果您使用 'HTTP'，Matomo 授权号 (token_auth) 是明文传送，因此建议使用 HTTPS 加密发送数据。要继续吗?",
+        "HttpIsNotSecureWarning": "如果您使用HTTP，Matomo 会以明文的方式传送授权令牌 (token_auth)。因此，我们建议您使用 HTTPS 以保障数据传送的安全性。要继续吗?",
         "HttpTimeout": "HTTP超时",
         "IncompatiblePiwikVersion": "您使用的 Matomo 版本与 Matomo Mobile 2 不兼容。请更新 Matomo 后重试或者安装 Matomo Mobile 1。",
         "LastUpdated": "最后升级: %s",
@@ -592,7 +595,7 @@
         "YouAreOffline": "抱歉，您目前离线状态",
         "ExceptionNoViewAccess": "请检查你的用户名与密码，并确保你至少有一个网站%s的权限",
         "Mobile_HowtoExitAndroid": "再次点击返回键以退出",
-        "MatomoMarketplace": "Matomo市场",
+        "MatomoMarketplace": "Matomo 应用市场",
         "EnterAuthCode": "输入二次登录认证验证码",
         "EnterCorrectAuthCode": "输入正确的二次登录认证验证码",
         "EnterAuthCodeExplanation": "您似乎开启了二次登录认证，请输入6位验证码以登陆您的账户。"
