--- a/plugins/PrivacyManager/lang/tr.json
+++ b/plugins/PrivacyManager/lang/tr.json
@@ -10,34 +10,10 @@
         "ConsentExplanation": "Onay sorma, bireylere kendi kişisel verilerinin nasıl işleneceğini seçme ve denetleme olanağı sunar.",
         "ClickHereSettings": "%s ayarlarına erişmek için buraya tıklayın.",
         "WhenDoINeedConsent": "Kullanıcı onayını ne zaman sormalıyım?",
+        "WhenConsentIsNeeded1": "%1$sGenel Veri Koruma Yönetmeliği (GVKY, GDPR) kişisel gizlilik düzenlemeleri%2$s kapsamında, kişisel verileri işlerken, bazı durumlarda kullanıcılarınızın onayını istemeniz gerekir. Onay istemeniz gerekip gerekmediğini belirlemek için kişisel verilerin işlenmesine ilişkin yasal dayanağınızın \"Onay\" ya da \"Meşru menfaat\" olup olmadığını ya da kişisel verilerin toplanmasından tamamen kaçınıp kaçınmayacağınızı belirlemeniz gerekir. %3$sMatomo için Genel Veri Koruma Yönetmeliği kapsamındaki yasal dayanak%4$s hakkında ayrıntılı bilgi edinmenizi öneririz.",
         "WhenConsentIsNeeded2": "Kullanıcılarınızın onayını almanız gerektiğinde ve geçmişte kullanıcılarınızın \"Onayını\" aldığınızı kanıtlayamıyorsanız, %1$sönceden izlediğiniz ham kullanıcı verilerini anonimleştirmeniz%2$s önerilir.",
         "HowDoIAskForConsent": "Kullanıcılardan nasıl onay isterim?",
-        "AskForConsentFollowSteps": "Verilerinin Matomo tarafından işlenmesinden önce kullanıcılardan onay istemek için aşağıdaki adımları izleyin.",
-        "AskForConsentStep1": "1. Adım: Onay istenir",
-        "AskForConsentStep1Desc1": "Onay istemek için aşağıdaki satırları tüm sayfalarınızda var olan Matomo İzleme kodunun üstüne ekleyin:",
-        "AskForConsentStep1Desc2": "Bu 'requireConsent' işlevi yürütüldükten sonra Matomo tarafına hiçbir izleme isteği gönderilmez. Bu sayfa görüntülenirken bazı %1$sizleme çerezlerinin%2$s kullanılabileceğini unutmayın. Ancak bu çerezler kullanıcı başka bir sayfaya geçtiğinde ya da web tarayıcıyı kapattığında silinir.",
-        "AskForConsentStep2": "2. Adım: Kişisel gizlilik bildirimi yoluyla onay istenir",
-        "AskForConsentStep3": "3. Adım: Kullanıcı onay verir",
-        "AskForConsentStep3Desc": "Kullanıcı onay verdiğinde, A) Matomo tarafından verilmiş onayın hatırlanmasına izin verebilir ya da B) onayın hatırlanması için kendi onay aracınızı kullanabilirsiniz. Aşağıda bu iki çözümü sunuyoruz:",
-        "AskForConsentStep3DescA": "A) Matomo tarafından verilmiş onayın hatırlanmasına izin veriyorsanız",
-        "AskForConsentStep3DescADesc1": "Kullanıcı onay verdiğinde, aşağıdaki yöntemi çağırarak Matomo tarafından kullanıcının onay verdiğinin hatırlanmasına izin verebilirsiniz:",
-        "AskForConsentStep3DescADesc2": "Matomo \"consent\" adında bir çerez ayarlayarak sonraki isteklerde kullanıcının onay verdiğini hatırlar. Bu çerez var olduğu sürece, Matomo onay verildiğini bilir ve verileri otomatik olarak işler. Böylece %1$s yöntemini bir kez çağırmanız yeterlidir ve her sayfa görüntülemesi için %2$s yöntemini çağırmanız gerekmez.",
-        "AskForConsentStep3DescANote1": "Varsayılan olarak, çerez ve onay sonsuza kadar hatırlanır. Şunu çağırarak kullanıcı onayı için isteğe bağlı bir son kullanma süresi belirtilebilir:",
-        "AskForConsentStep3DescANote2": "Matomo üzerinde aynı web sitesindeki birden çok alt alanı izliyorsanız, onay isterken kullanıcının veri topladığınız tüm alt etki alanları için izin verdiğinden emin olmak istersiniz. Kullanıcı yalnız belirli bir etki alanı ya da alt etki alanları için onay verirse, 'setCookieDomain' ve 'setCookiePath' seçeneklerini kullanarak onay çerezi etki alanı adı ve yolunun kapsamını kısıtlamanız ya da genişletmeniz gerekebilir (JavaScript izleme rehberinden ayrıntılı bilgi alabilirsiniz).",
-        "AskForConsentStep3DescANote3": "Çerezlerin devre dışı bırakılmaması gerekir.",
-        "AskForConsentStep3DescB": "B) Onayın hatırlanması için kendi onay aracınızı kullanıyorsanız",
-        "AskForConsentStep3DescBDesc1": "Bazı durumlarda, kullanıcının kendi sisteminizde ya da İçerik Yönetim Sisteminizde doğrudan izlenmesine onay verdiği bilgileri kaydedersiniz (kullanıcı onayını anımsamak için kendi çerezinizi kullanmanız gibi). Kullanıcıdan verilerini işleme iznini aldıktan sonra, 'setConsentGiven' işlevini çağırmanız gerekir:",
-        "AskForConsentStep3DescBDesc2": "Bununla kullanıcının JavaScript izleyiciye onay verdiği bilinir ve izleme olması gerektiği gibi çalışır. Bu işlev %1$s sonrasında çağrılmalıdır.",
-        "AskForConsentStep3DescBNote1": "%1$s işlevini çağırdığınızda, Matomo sonraki isteklerde bu kullanıcının onay verdiğini hatırlamaz: her sayfada setConsentGiven  işlevini çağırmanız önemlidir.",
-        "AskForConsentStep3DescBNote2": "kullanıcı onay verdiğinde, öncelikle %1$s işlevini çağırmaktan kaçınmanız gerekir.",
-        "AskForConsentStep4": "4. Adım: Kullanıcı onayını geri alır",
-        "AskForConsentStep4Desc": "Kullanıcının, onayını kaldırmak için belirli bir işlem yapması gerekir. Örneğin: \"Artık izlenmek istemiyorum\" gibi bir düğmeye tıklar.",
-        "AskForConsentStep4DescA": "A) Verilmiş onayın Matomo tarafından hatırlanmasını istiyorsanız",
-        "AskForConsentStep4DescADesc": "Kullanıcı artık onay vermediğini belirttiğinde, şu yöntemi bir kez çağırmanız gerekir:",
-        "AskForConsentStep4DescADesc2": "Bu işlem verilmiş onayın hatırlanmasını sağlayan çerezi siler.",
-        "AskForConsentStep4DescB": "B) Onayın hatırlanması için kendi onay aracınızı kullanıyorsanız",
-        "AskForConsentStep4DescBDesc": "Kullanıcı artık onay vermediğini belirttiğinde, şu yöntemi artık çağırmamalısınız:",
-        "AskForConsentStepNotes": "Notlar:",
+        "HowDoIAskForConsentIntroduction": "Ayrıntılı bilgi almak için %1$sçerez sorulması ya da izleme onayı için bütünleştirme rehberine bakabilirsiniz.%2$s",
         "AnonymizeSites": "Şu sitelerin verileri anonimleştirilsin",
         "AnonymizeRowDataFrom": "Şu tarihten sonraki tüm ham veriler anonim kılınsın:",
         "AnonymizeRowDataTo": "Şu tarihten önceki tüm ham veriler anonim kılınsın:",
