--- a/plugins/UserCountry/lang/id.json
+++ b/plugins/UserCountry/lang/id.json
@@ -4,11 +4,14 @@
         "City": "Kota",
         "CityAndCountry": "%1$s, %2$s",
         "Continent": "Benua",
+        "Continents": "Benua",
         "Country": "Negara",
+        "CountryCode": "Kode negara",
         "country_a1": "Wali Anonim",
         "country_a2": "Penyedia Satelit",
         "country_cat": "Masyarakat berbahasa Katalan",
         "country_o1": "Negara Lain",
+        "VisitLocation": "Lokasi berkunjung",
         "CurrentLocationIntro": "Berdasar penyedia ini, lokasi Anda adalah",
         "DefaultLocationProviderDesc1": "Lokasi penyedia asali menebak negara pengunjung dari bahasa yang digunakan.",
         "DistinctCountries": "%s negara berbeda",
