--- a/plugins/VisitTime/lang/de.json
+++ b/plugins/VisitTime/lang/de.json
@@ -5,8 +5,19 @@
         "ColumnLocalMinute": "Lokalzeit - Minute (Start des Besuchs)",
         "ColumnServerTime": "Server-Zeit",
         "ColumnServerHour": "Serverzeit - Stunde",
+        "ColumnVisitEndServerHour": "Serverzeit - Stunde (Zeit der letzten Aktion)",
+        "ColumnVisitEndServerMinute": "Serverzeit - Minute (Zeit der letzten Aktion)",
         "ColumnVisitStartServerHour": "Serverzeit - Stunde (Start des Besuchs)",
         "ColumnVisitStartServerMinute": "Serverzeit - Minute (Start des Besuchs)",
+        "ColumnVisitEndServerDate": "Serverzeit - Datum (Zeit der letzten Aktion)",
+        "ColumnVisitEndServerDayOfMonth": "Serverzeit - Tag des Monats (Zeit der letzten Aktion)",
+        "ColumnVisitEndServerDayOfWeek": "Serverzeit - Wochentag (Zeit der letzten Aktion)",
+        "ColumnVisitEndServerDayOfYear": "Serverzeit - Tag des Jahres (Zeit der letzten Aktion)",
+        "ColumnVisitEndServerQuarter": "Serverzeit - Quartal (Zeit der letzten Aktion)",
+        "ColumnVisitEndServerSecond": "Serverzeit - Sekunde (Zeit der letzten Aktion)",
+        "ColumnVisitEndServerWeekOfYear": "Serverzeit - Woche des Jahres (Zeit der letzten Aktion)",
+        "ColumnVisitEndServerMonth": "Serverzeit - Monat (Zeit der letzten Aktion)",
+        "ColumnVisitEndServerYear": "Serverzeit - Jahr (Zeit der letzten Aktion)",
         "ColumnServerMinute": "Serverzeit - Minute",
         "DayOfWeek": "Wochentag",
         "LocalTime": "Besuche nach lokaler Zeit",
