--- a/lang/tr.json
+++ b/lang/tr.json
@@ -133,7 +133,10 @@
         "DaysHours": "%1$s gün %2$s saat",
         "DaysSinceFirstVisit": "İlk ziyaretten bu yana geçen gün",
         "DaysSinceLastEcommerceOrder": "Son siparişten bu yana geçen gün",
+        "SecondsSinceLastEcommerceOrder": "Son e-ticaret siparişinden bu yana geçen saniye",
         "DaysSinceLastVisit": "Son ziyaretten bu yana geçen gün",
+        "SecondsSinceLastVisit": "Son ziyaretten bu yana geçen saniye",
+        "SecondsSinceFirstVisit": "İlk ziyaretten bu yana geçen saniye",
         "Default": "Varsayılan",
         "DefaultAppended": "(varsayılan)",
         "Delete": "Sil",
