--- a/plugins/Diagnostics/lang/zh-cn.json
+++ b/plugins/Diagnostics/lang/zh-cn.json
@@ -9,6 +9,7 @@
         "HideUnchanged": "如果只想看改变的值可以%1$s，隐藏所有为改变的值%2$s。",
         "Sections": "部分",
         "DatabaseReaderConnection": "数据库读取器连接",
+        "DatabaseUtf8mb4CharsetRecommended": "你的数据库不支持 utf8mb4 字符集。",
         "CronArchivingLastRunCheck": "上次成功完成归档",
         "CronArchivingHasNotRun": "存档尚未成功运行。",
         "CronArchivingHasNotRunInAWhile": "归档最后一次在%1$s上成功运行，这是%2$s之前。",
