--- a/plugins/PrivacyManager/lang/de.json
+++ b/plugins/PrivacyManager/lang/de.json
@@ -10,34 +10,9 @@
         "ConsentExplanation": "Einverständnis bedeutet individuelle Wahl zu offerieren und Kontrolle darüber, wie die persönlichen Daten verwendet werden sollen.",
         "ClickHereSettings": "Hier klicken, um die %s Einstellungen zu bearbeiten.",
         "WhenDoINeedConsent": "Wann muss ich die Zustimmung der Benutzer einholen?",
+        "WhenConsentIsNeeded1": "Im Kontext der %1$sDSGVO Datenschutzregulierungen%2$s, wenn Sie persönliche Daten auswerten, werden Sie in bestimmten Fällen darauf angewiesen sein, eine Einverständniserklärung bei Ihrem Benutzer einzuholen. Um festzustellen ob Sie eine Einverständniserklärung benötigen, müssen Sie festlegen ob Ihre rechtliche Basis zur Auswertung persönlicher Daten \"einverständnisbasiert\" oder \"legitimiertes Interesse\" ist, oder ob Sie das sammeln von persönlichen Daten generell vermeiden können. Wir empfehlen Ihnen mehr über die %3$srechtliche Situation unter der DSGVO für Matomo%4$s zu lesen.",
         "WhenConsentIsNeeded2": "Beachten Sie, dass wenn Sie eine Einverständniserklärung Ihres Benutzers benötigen und Sie nicht beweisen können, dass Sie das Einverständnis der Benutzer in der Vergangenheit bekommen habe, wir Ihnen empfehlen die %1$szuvor getrackten Benutzer-Rohdaten zu anonymisieren%2$s.",
         "HowDoIAskForConsent": "Wie bitte ich die Benutzer um Zustimmung?",
-        "AskForConsentFollowSteps": "Befolgen Sie die folgenden Schritte, um Ihre Benutzer um ihre Zustimmung zu bitten, bevor ihre Daten durch Matomo verarbeitet werden.",
-        "AskForConsentStep1": "Schritt 1: Zustimmung voraussetzen",
-        "AskForConsentStep1Desc1": "Um das Einverständnis zu erfordern, fügen Sie die folgende Zeile am Anfang Ihres existierenden Matomo Tracking Codes bei all Ihren Seiten ein:",
-        "AskForConsentStep1Desc2": "Sobald diese 'requireConsent' Funktion einmal ausgeführt wurde, werden keine Trackinginformationen mehr an Matomo gesandt. Beachten Sie, dass einige %1$sTracking Cookies%2$s während der Seitenansicht gesetzt werden, aber dass diese gelöscht werden, sobald der Benutzer auf eine andere Seite navigiert oder den Browser schließt.",
-        "AskForConsentStep2": "Schritt 2: Per Datenschutzhinweis eine Zustimmung einholen",
-        "AskForConsentStep3": "Schritt 3: Benutzer gibt seine Zustimmung",
-        "AskForConsentStep3Desc": "Sobald ein Benutzer das Einverständnis gibt, können Sie entweder A) Matomo das Einverständnis merken lassen oder B) Ihr eigenes Tool zum Merken des Einverständnisses einsetzen. Wir präsentieren die zwei Lösungen unten:",
-        "AskForConsentStep3DescA": "A) Wenn Sie möchten, dass Matomo sich die Zustimmung merkt",
-        "AskForConsentStep3DescADesc1": "Sobald ein Benutzer das Einverständnis gibt, können Sie Matomo das Einverständnis merken lassen, indem Sie die einfach folgende Methode einmal aufrufen:",
-        "AskForConsentStep3DescADesc2": "Matomo wird sich dann in nachfolgenden Anfragen merken, dass die Benutzerin oder der Benutzer die Einverständniserklärung gegeben hat, indem ein Cookie namens \"consent\" gesetzt wurde. Solange dieses Cookie existiert, wird Matomo wissen, dass die Einverständniserklärung erteilt wurde und wird die Daten automatisch auswerten. Das bedeutet, dass Sie %1$s nur einmal aufrufen müssen, und dass es nicht nötig ist, %2$s auf einer anderen Seite aufzurufen.",
-        "AskForConsentStep3DescANote1": "Standardmäßig wird das Cookie mit dem Einverständnis für immer gespeichert. Es ist möglich, ein optionales Ablaufdatum für das Benutzereinverständnis mithilfe des folgenden Aufrufs zu definieren:",
-        "AskForConsentStep3DescANote2": "Wenn Sie mehrere Unterdomains auf der selben Webseite in Matomo tracken, möchten Sie sicherstellen, dass wenn Sie um Einverständnis bitten, der Benutzer das Einverständnis für alle Unterdomains gibt, auf denen Sie Daten sammeln. Wenn der Benutzer nur für eine bestimmte Domain oder Subdomain(s) das Einverständnis gibt, möchten Sie den Bereich der Einverständnis-Cookie-Domain möglicherweise mithilfe von 'setCookieDomain' und ‘setCookiePath' einschränken oder erweitern (lernen Sie mehr dazu in der JavaScript Tracking Anleitung).",
-        "AskForConsentStep3DescANote3": "Es ist erforderlich, dass Sie Cookies nicht deaktivieren.",
-        "AskForConsentStep3DescB": "B) wenn Sie Ihr eigenes Tool zur Speicherung der Einwilligung verwenden",
-        "AskForConsentStep3DescBDesc1": "In einigen Fällen registrieren Sie in Ihrem eigenen System oder CMS, dass der Benutzer das Einverständnis gegeben hat, getrackt zu werden (zum Beispiel, wenn Sie Ihr eigenes Cookie zum Speichern des Benutzer-Einverständnisses verwenden). Wenn Sie einmal das Einverständnis des Benutzers erhalten haben, dessen Daten zu verarbeiten, müssen Sie die 'setContentGiven' Methode aufrufen:",
-        "AskForConsentStep3DescBDesc2": "Dies lässt den JavaScript Tracker wissen, dass der Benutzer das Einverständnis gegeben hat und stellt sicher, dass das Tracking wie erwartet funktioniert. Diese Funktion muss irgendwann nach %1$s aufgerufen werden.",
-        "AskForConsentStep3DescBNote1": "wenn Sie %1$s aufrufen, wird Matomo bei nachfolgenden Anfragen nicht registrieren, dass dieser Benutzer sein Einverständnis gegeben hat: Es ist wichtig, dass Sie setContentGiven auf jeder Seite aufrufen.",
-        "AskForConsentStep3DescBNote2": "Wenn der Benutzer seine Zustimmung gegeben hat, könnten Sie auch den Aufruf von %1$s von vornherein vermeiden.",
-        "AskForConsentStep4": "Schritt 4: Benutzer widerruft Zustimmung",
-        "AskForConsentStep4Desc": "Um das Einverständnis zu entfernen, muss der Benutzer eine spezifische Aktion ausführen, zum Beispiel: Auf einen Button \"Ich will nicht mehr getrackt werden\" klicken.",
-        "AskForConsentStep4DescA": "A) Wenn Sie möchten, dass Matomo sich die Zustimmung merkt",
-        "AskForConsentStep4DescADesc": "Wenn die Benutzerin oder der Benutzer erklärt hat, dass sie oder er nicht weiter das Einverständnis gibt, müssen Sie die folgende Methode einmal aufrufen:",
-        "AskForConsentStep4DescADesc2": "Dies stellt sicher, dass das Cookie, welches das erteilte Einverständnis enthält, gelöscht wird.",
-        "AskForConsentStep4DescB": "B) wenn Sie Ihr eigenes Tool zur Speicherung der Einwilligung verwenden",
-        "AskForConsentStep4DescBDesc": "Wenn die Benutzerin oder der Benutzer erklärt hat, dass sie oder er nicht weiter das Einverständnis gibt, dürfen Sie die folgende Methode nicht mehr aufrufen:",
-        "AskForConsentStepNotes": "Anmerkungen:",
         "AnonymizeSites": "Die Daten für diese Seite(n) anonymisieren",
         "AnonymizeRowDataFrom": "Alle Rohdaten anonymisieren startend ab:",
         "AnonymizeRowDataTo": "Alle Rohdaten anonymisieren bis zu:",
