--- a/plugins/PrivacyManager/lang/nl.json
+++ b/plugins/PrivacyManager/lang/nl.json
@@ -6,10 +6,26 @@
         "AnonymizeIpMaskLengtDescription": "Selecteer hoeveel bytes van IP's van de bezoekers moet worden gemaskeerd.",
         "AnonymizeIpMaskLength": "%1$s byte(s) - bijv. %2$s",
         "AskingForConsent": "Vragen om toestemming",
+        "ConsentExplanation": "Toestemming betekent dat individuen keuzemogelijkheden en controle krijgen over hoe hun persoonsgegevens worden verwerkt.",
         "ClickHereSettings": "Klik hier om naar de %s-instellingen te gaan.",
+        "WhenDoINeedConsent": "Wanneer moet ik toestemming van de gebruiker vragen?",
+        "HowDoIAskForConsent": "Hoe vraag ik gebruikers om toestemming?",
+        "AnonymizeSites": "Anonimiseer de gegevens van deze site (s)",
+        "AnonymizeRowDataFrom": "Anonimiseer alle onbewerkte gegevens vanaf:",
+        "AnonymizeRowDataTo": "Anonimiseer alle onbewerkte gegevens tot:",
+        "AnonymizeIp": "IP anonimiseren",
+        "AnonymizeLocation": "Locatie anonimiseren",
         "AnonymizeUserId": "Gebruikers-ID vervangen door een pseudoniem",
+        "AnonymizeDataNow": "Anonimiseer eerdere gegevens voor de geselecteerde site en tijd",
+        "UnsetVisitColumns": "Bezoek kolommen uitschakelen",
+        "UnsetActionColumns": "Actie kolommen uitschakelen",
+        "AwarenessDocumentation": "Bewustzijn en documentatie",
+        "AwarenessDocumentationIntro": "Informeer uw gebruikers duidelijk en transparant en maak uw collega's bewust van de gegevens die worden verzameld en hoe deze worden gebruikt:",
+        "AwarenessDocumentationDesc1": "Informeer uw bezoekers via een duidelijke privacyverklaring wanneer u persoonlijke gegevens verzamelt.",
         "CurrentDBSize": "Huidige databasegrootte",
+        "DataRetention": "Dataretentie",
         "DBPurged": "Database geleegd.",
+        "DeleteBothConfirm": "Je staat op het punt om zowel het verwijderen van onbewerkte gegevens als het verwijderen van rapportgegevens in te schakelen. Hiermee wordt de mogelijkheid om oude analysegegevens te bekijken definitief verwijderd. Weet je zeker dat je dit wilt doen?",
         "DeleteDataInterval": "Verwijder oude gegevens elke",
         "DeleteOldVisitorLogs": "Verwijder oude bezoekerslogboeken",
         "DeleteOldRawData": "Verwijder regelmatig oude onbewerkte gegevens",
@@ -35,9 +51,11 @@
         "GeolocationAnonymizeIpNote": "Opmerking: geolocatie heeft ongeveer dezelfde resultaten met 1 byte geanonimiseerd. Met 2 bytes of meer zal geolocatie onnauwkeurig zijn.",
         "GDPR": "AVG",
         "GdprManager": "AVG Manager",
+        "GdprChecklists": "AVG checklist",
         "GdprOverview": "AVG Overzicht",
         "GdprTools": "AVG Hulpmiddelen",
         "GetPurgeEstimate": "Schat het aantal teruggewonnen ruimte",
+        "IndividualsRights": "Rechten van individuen",
         "KeepBasicMetrics": "Behoud de basisgegevens (visits, page views, bounce rate, goal conversions, ecommerce conversions, etc.)",
         "KeepDataFor": "Bewaar alle gegevens voor",
         "KeepReportSegments": "Voor de hierboven bewaarde gegevens, bewaar ook de gesegmenteerde rapporten",
@@ -54,6 +72,7 @@
         "ReportsDataSavedEstimate": "Database omvang",
         "SaveSettingsBeforePurge": "De data verwijder instellingen zijn aangepast. Sla deze eerst op voor het starten van het verwijderen.",
         "SeeAlsoOurOfficialGuidePrivacy": "Zie ook onze officiele gids: %1$sWeb Analytics Privacy%2$s",
+        "SecurityProceduresIntro": "Informeer uw gebruikers duidelijk en transparant en maak uw collega's bewust van de gegevens die worden verzameld en hoe deze worden gebruikt:",
         "TeaserHeadline": "Privacy-instellingen",
         "UseAnonymizedIpForVisitEnrichment": "Gebruik de geanonimiseerde IP-adressen ook bij het verrijken van bezoeken.",
         "UseAnonymizeIp": "Anonimiseer IP-adressen van bezoekers",
