--- a/plugins/UsersManager/lang/de.json
+++ b/plugins/UsersManager/lang/de.json
@@ -18,8 +18,10 @@
         "AuthTokenPurpose": "Wozu benötigen Sie diesen Token?",
         "NoTokenCreatedYetCreateNow": "Bisher keine Token erstellt, %1$serstellen Sie jetzt einen neuen Token%2$s.",
         "TokenSuccessfullyGenerated": "Token erfolgreich generiert",
+        "ConfirmTokenCopied": "Ich bestätige, dass ich den Token kopiert habe und verstehe, dass ich den Token nicht mit jemandem teilen darf.",
         "GoBackSecurityPage": "Zurück zur Sicherheitsseite.",
         "PleaseStoreToken": "Bitte bewahren Sie Ihren Token sicher auf, denn Sie werden nicht mehr in der Lage sein, diesen Token anzeigen zu lassen oder zu ändern.",
+        "DoNotStoreToken": "Teilen Sie diesen Token nicht mit jemand anderem, weil er so geheim ist wie Ihr Benutzername und Passwort.",
         "CreateNewToken": "Neuen Token generieren",
         "AnonymousAccessConfirmation": "Sie sind dabei, anonymen Besuchern Ansichtszugriff für diese Webseite zuzusichern. Das bedeutet, Ihre analytischen Berichte und Ihre Besucherinformationen werden für alle öffentlich sichtbar sein, auch ohne Anmeldung. Sind Sie sicher, dass Sie fortfahren wollen?",
         "AnonymousUser": "Anonymer Nutzer",
@@ -175,6 +177,7 @@
         "EmailChangedEmail1": "Die E-Mail-Adresse, die mit Ihrem Benutzerkonto verknüpft ist, wurde auf %1$s geändert.",
         "EmailChangedEmail2": "Diese Änderung wurde von folgendem Gerät veranlasst: %1$s (IP-Adresse = %2$s).",
         "IfThisWasYouIgnoreIfNot": "Falls Sie dies waren, können Sie diese E-Mail ignorieren. Falls Sie dies nicht waren, loggen Sie sich bitte ein, korrigieren Sie Ihre E-Mail-Adresse, ändern Sie Ihr Passwort und kontaktieren Sie Ihren Matomo-Administrator.",
+        "IfThisWasYouPasswordChange": "Wenn Sie das waren, können Sie diese E-Mail ignorieren. Wenn Sie das nicht Sie waren, kontaktieren Sie sofort Ihren Matomo Administrator, weil Ihr Benutzerkonto möglicherweise gefährdet ist!",
         "PasswordChangeNotificationSubject": "Das Passwort Ihres Matomo Benutzerkontos wurde soeben geändert",
         "PasswordChangedEmail": "Ihr Passwort wurde soeben geändert. Diese Änderung wurde von diesem Gerät veranlasst: %1$s (IP-Adresse = %2$s).",
         "NewsletterSignupTitle": "Newsletter-Anmeldung",
