Add new dimension profilable

--- a/plugins/CoreHome/lang/en.json
+++ b/plugins/CoreHome/lang/en.json
@@ -109,6 +109,7 @@
         "ReportWithMetadata": "Report with metadata",
         "ReadMoreOnlineGuide": "Read more about this topic in the online guide.",
         "SeeAvailableVersions": "See Available Versions",
-        "QuickLinks": "Quick Links"
+        "QuickLinks": "Quick Links",
+        "Profilable": "Profilable"
     }
 }
